--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -15,4 +15,5 @@
     margin: 3rem;
     width: 250px;
     height: 50px;
+    background: var(--ion-background-color) !important;
 }
